kubernetes/infra/components/velero/configs/base/httproute-s3.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: seaweedfs-s3
  annotations:
    external-dns.kubernetes.io/cloudflare-proxied: "false"
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
  hostnames:
    - s3${ROUTE_SUFFIX}.${HOMELAB_INTERNAL_SUBDOMAIN}
  rules:
    - timeouts:
        request: 120s
      matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: seaweed-s3
          port: 8333
